--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -806,6 +806,7 @@
   "com_ui_chats": "Chats",
   "com_ui_check_internet": "Check your internet connection",
   "com_ui_clear": "Clear",
+  "com_ui_cleared": "Cleared!",
   "com_ui_clear_all": "Clear all",
   "com_ui_clear_browser_cache": "Clear your browser cache",
   "com_ui_clear_presets": "Clear Presets",
@@ -986,6 +987,11 @@
   "com_ui_feedback_tag_not_matched": "Didn't match my request",
   "com_ui_feedback_tag_other": "Other issue",
   "com_ui_feedback_tag_unjustified_refusal": "Refused without reason",
+  "com_ui_feedback_text": "Text Feedback",
+  "com_ui_feedback_text_title": "Provide Feedback",
+  "com_ui_feedback_text_label": "Your feedback",
+  "com_ui_feedback_text_placeholder": "Share your thoughts about this response...",
+  "com_ui_feedback_text_hint": "Press Ctrl+Enter to save",
   "com_ui_field_max_length": "{{field}} must be less than {{length}} characters",
   "com_ui_field_required": "This field is required",
   "com_ui_file_input_avatar_label": "File input for avatar",
