--- a/client/src/locales/it/translation.json
+++ b/client/src/locales/it/translation.json
@@ -683,6 +683,7 @@
   "com_ui_filter_prompts_name": "Filtra prompt per nome",
   "com_ui_finance": "Finanza",
   "com_ui_fork": "Duplica",
+  "com_ui_cleared": "Eliminato!",
   "com_ui_fork_all_target": "Includi tutto da/per qui",
   "com_ui_fork_branches": "Includi rami correlati",
   "com_ui_fork_change_default": "Cambia opzione di duplicazione predefinita",
